# malla

./: .cursorrules  .dockerignore  .gitignore  .pre-commit-config.yaml  AI.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  config.sample.yaml  docker-compose.example.yml  docker-compose.prod.yml  docker-compose.yml  env.example  flake.nix  malla-capture  malla-web  malla-web-gunicorn  pyproject.toml  run_tests.py  test_timezone.py  test_timezone_basic.py
.cursor/: settings.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  copilot-setup-steps.yml  docker.yml
docs/: development.md
scripts/: benchmark_longest_links.py  benchmark_map_render.py  create_demo_database.py  generate_screenshots.py
src/malla/: __init__.py  config.py  mqtt_capture.py  telemetry.py  tracing_utils.py  web_ui.py  wsgi.py
src/malla/database/: __init__.py  connection.py  packet_repository_optimized.py  repositories.py  schema.py
src/malla/models/: __init__.py  traceroute.py
src/malla/routes/: __init__.py  api_routes.py  chat_routes.py  gateway_routes.py  main_routes.py  node_routes.py  packet_routes.py  traceroute_routes.py
src/malla/services/: __init__.py  analytics_service.py  gateway_service.py  location_service.py  meshtastic_service.py  node_service.py  traceroute_service.py
src/malla/static/css/: chat.css  malla.css  modern-table.css  node-picker.css  theme-2025.css
src/malla/static/js/: chat.js  dark-mode-toggle.js  direct_receptions.js  dom.js  filter-store.js  location-cache.js  modern-table.js  node-cache.js  node-picker.js  relay_node_analysis.js  table-filter-controller.js  timezone-toggle.js  timezone-utils.js  url-filter-manager.js
src/malla/templates/: base.html  chat.html  dashboard.html  gateway_comparison.html  line_of_sight.html  longest_links.html  macros.html  map.html  node_detail.html  nodes.html  packet_detail.html  packets.html  traceroute.html  traceroute_graph.html  traceroute_hops.html
src/malla/templates/components/: direct_receptions.html  raw_packet_analysis.html  receptions.html  relay_node_analysis.html  shared_sidebar.html  shared_sidebar_assets.html  sidebar_macros.html  table_layout_macros.html  traceroute_graph.html
src/malla/utils/: __init__.py  decryption.py  formatting.py  geo_utils.py  node_utils.py  serialization_utils.py  traceroute_graph.py  traceroute_utils.py
tests/: README.md  __init__.py  conftest.py  test_dark_mode.html
tests/conftest/: test_server.py
tests/e2e/: conftest.py  test_chat_page.py  test_debug_node_picker.py  test_exclude_filters_e2e.py  test_exclude_filters_url_e2e.py  test_graph.py  test_line_of_sight.py  test_line_of_sight_e2e.py  test_map_filters.py  test_map_layout.py  test_nodes_primary_channel_filter.py  test_nodes_search.py  test_packets_filters_e2e.py  test_packets_url_filters.py  test_tables.py  test_timezone_e2e.py  test_timezone_toggle.py  test_traceroute_filters_e2e.py  test_traceroute_url_filters.py
tests/fixtures/: __init__.py  database_fixtures.py  traceroute_graph_data.py
tests/integration/: __init__.py  test_api_endpoints.py  test_api_routes.py  test_api_text_decoding.py  test_chat_api.py  test_chat_feature.py  test_comprehensive_routes.py  test_data_cleanup.py  test_direct_receptions_api.py  test_direct_receptions_e2e.py  test_exclude_filters_api.py  test_exclude_self_api.py  test_gateway_routes.py  test_neighborinfo_packet_integration.py  test_node_routes.py  test_packet_routes.py  test_packets_exclude_self.py  test_protocol_diversity_fix.py  test_relay_node.py  test_relay_node_analysis.py  test_relay_node_analysis_api.py  test_sorting_endpoints.py  test_traceroute_filters.py  test_traceroute_route_node_grouped.py  test_traceroute_route_node_pagination.py  test_traceroute_routes.py
tests/unit/: __init__.py  test_broadcast_filter.py  test_broadcast_filter_api.py  test_broadcast_filter_integration.py  test_config.py  test_exclude_fields_ui.py  test_gateway_sorting.py  test_generate_screenshots.py  test_heywhatsthat_terrain_profile.py  test_mqtt_capture_nodeinfo.py  test_mqtt_capture_reconnection.py  test_mqtt_client_id.py  test_multiple_decryption_keys.py  test_node_direct_receptions.py  test_node_picker_broadcast.py  test_node_repository.py  test_node_search_broadcast.py  test_node_utils.py  test_packet_reception_sorting.py  test_packet_routes.py  test_reverse_proxy.py  test_sanitize_floats.py  test_timezone_formatting.py  test_traceroute_distance_cache.py  test_traceroute_graph_utils.py  test_traceroute_link_endpoint.py  test_traceroute_link_endpoint_fix.py  test_traceroute_packet.py  test_traceroute_service.py  test_trusted_proxies.py  test_wsgi.py
